-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.4.0
-
None
-
3
-
5549
Found this while looking at logs during sanity-quota:
LustreError: 25420:0:(mdt_handler.c:2991:mdt_filter_recovery_request()) @@@ not permitted during recovery req@ffff88005077dc50 x1418031944421590/t0(0) o403->lustre-MDT0000-osp-MDT0000_UUID@0@lo:0/0 lens 304/0 e 0 to 0 dl 1352360245 ref 1 fl Interpret:/0/ffffffff rc 0/-1
Since LW connections ca make it during recovery, i think we should allow OBD_IDX_READ during recovery as well. The fix is simple, just add OBD_IDX_READ in met_filter_recovery_request().